force-app/main/default/objects/RequestResource__c/RequestResource__c.object-meta.xml
<CustomObject>
    <label>Request Resource</label>
    <nameField>
        <label>Request Resource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>