force-app/main/default/objects/RequestResource__c/fields/Authentication__c.field-meta.xml
<CustomField>
    <fullName>Authentication__c</fullName>
    <label>Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>