force-app/main/default/objects/RequestResource__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <description>Automatically adds a header for the type selected for POST requests only</description>
    <label>Content-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
            <value>
                <fullName>application/json</fullName>
            </value>
            <value>
                <fullName>application/XML</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
            <value>
                <fullName>text/plain</fullName>
            </value>
            <value>
                <fullName>text/xml</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>