force-app/main/default/objects/RequestResource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parameters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>